fast commit